// Vitest Snapshot v1

exports[`fixtures:basic > Get contents index > basic-index-body 1`] = `
{
  "children": [
    {
      "children": [
        {
          "type": "text",
          "value": "Index",
        },
      ],
      "props": {
        "id": "index",
      },
      "tag": "h1",
      "type": "element",
    },
  ],
  "toc": {
    "depth": 2,
    "links": [],
    "searchDepth": 2,
    "title": "",
  },
  "type": "root",
}
`;

exports[`fixtures:basic > navigation > Get cats navigation > basic-navigation-cats 1`] = `
[
  {
    "children": [
      {
        "id": "content:cats:index.md",
        "slug": "/cats",
        "title": "Cats list",
      },
      {
        "id": "content:cats:persian.md",
        "slug": "/cats/persian",
        "title": "Persian",
      },
      {
        "id": "content:cats:ragdoll.md",
        "slug": "/cats/ragdoll",
        "title": "Ragdoll",
      },
    ],
    "slug": "/cats",
    "title": "Cats list",
  },
]
`;

exports[`fixtures:basic > navigation > Get dogs navigation > basic-navigation-dogs 1`] = `
[
  {
    "children": [
      {
        "id": "content:dogs:bulldog.md",
        "slug": "/dogs/bulldog",
        "title": "Bulldog",
      },
      {
        "id": "content:dogs:German Shepherd.md",
        "slug": "/dogs/german-shepherd",
        "title": "German Shepherd",
      },
    ],
    "icon": "🐶",
    "slug": "/dogs",
    "title": "Dogs List",
  },
]
`;

exports[`fixtures:basic > navigation > Get navigation > basic-navigation 1`] = `
[
  {
    "children": [
      {
        "id": "content:cats:index.md",
        "slug": "/cats",
        "title": "Cats list",
      },
      {
        "id": "content:cats:persian.md",
        "slug": "/cats/persian",
        "title": "Persian",
      },
      {
        "id": "content:cats:ragdoll.md",
        "slug": "/cats/ragdoll",
        "title": "Ragdoll",
      },
    ],
    "slug": "/cats",
    "title": "Cats list",
  },
  {
    "children": [
      {
        "id": "content:dogs:bulldog.md",
        "slug": "/dogs/bulldog",
        "title": "Bulldog",
      },
      {
        "id": "content:dogs:German Shepherd.md",
        "slug": "/dogs/german-shepherd",
        "title": "German Shepherd",
      },
    ],
    "icon": "🐶",
    "slug": "/dogs",
    "title": "Dogs List",
  },
  {
    "children": [
      {
        "id": "fa-ir:fa:index.md",
        "slug": "/",
        "title": "سلام",
      },
    ],
    "slug": "/",
    "title": "سلام",
  },
  {
    "children": [
      {
        "id": "content:index.md",
        "slug": "/",
        "title": "Index",
      },
    ],
    "slug": "/",
    "title": "Index",
  },
]
`;
